--- a/README
+++ b/README
@@ -59,6 +59,12 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
+* V. 1.0 (forthcoming):  - Add option to add the instructor's name to both the course
+                           (via \LecInstructor or 'instructor' package option) and to
+                           specific sessions (via 'instructor' option of \NewSession).
+                         - Add option to add names of presenting students to a session
+                           (via 'presstudents' option).
+
 * V. 0.9 (2015-02-08):   - Add a way to adjust the interval between two sessions
                            ('interval' package option and \LecInterval macro).
                          - Add a way to shift session dates from the regular
