--- a/README
+++ b/README
@@ -64,6 +64,8 @@ instructions; also have a look at the example files.
                            specific sessions (via 'instructor' option of \NewSession).
                          - Add option to add names of presenting students to a session
                            (via 'presstudents' option).
+                         - Fix expansion issue in 'options' option of
+                           \makebeamerprogram.
 
 * V. 0.9 (2015-02-08):   - Add a way to adjust the interval between two sessions
                            ('interval' package option and \LecInterval macro).
