--- a/README
+++ b/README
@@ -59,7 +59,9 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
-* V. 1.0 (forthcoming):  - Add option to add the instructor's name to both the course
+* V. 1.0 (forthcoming):  - Lecture types and term types are not hardcoded anymore and can
+                           be freely modified and extended via \DefLecType and \DefSemType.
+                         - Add option to add the instructor's name to both the course
                            (via \LecInstructor or 'instructor' package option) and to
                            specific sessions (via 'instructor' option of \NewSession).
                          - Add option to add names of presenting students to a session
