--- a/README
+++ b/README
@@ -29,7 +29,8 @@ bibliography via biblatex.
 The package consists of the following files:
 
 * jslectureplanner.sty (the LaTeX package)
-* german-default.lps (German style file)
+* german-default.lps (German 'model' style file with default settings)
+* cologne.lps (German style file attempted at the Univ. of Cologne)
 * jslectureplanner.pdf (package documentation)
 * jslectureplanner.tex (documentation source)
 * README (this very file)
@@ -73,6 +74,7 @@ instructions; also have a look at the example files.
                            [github issue #2]
                          - Fix expansion issue in 'options' option of
                            \makebeamerprogram.
+                         - Add 'cologne' style file.
 
 * V. 0.9 (2015-02-08):   - Add a way to adjust the interval between two sessions
                            ('interval' package option and \LecInterval macro).
